--- a/lib/aquir_web/templates/user/index.html.eex
+++ b/lib/aquir_web/templates/user/index.html.eex
@@ -7,7 +7,7 @@
       <td><b><%= user.credentials.username %></b></td>
       <td><%= user.name %></td>
       <td><%= user.email %></td>
-      <td><%= link "View", to: user_path(@conn, :show, user.user_id) %></td>
+      <td><%= link "View", to: user_path(@conn, :show, user.credentials.username) %></td>
     </tr>
   <% end %>
 </table>
