--- a/lib/aquir_web/templates/user/index.html.eex
+++ b/lib/aquir_web/templates/user/index.html.eex
@@ -4,10 +4,10 @@
   <%= for user <- @users do %>
     <tr>
       <td><%= user.user_id %></td>
-      <td><b><%= user.credentials.username %></b></td>
+      <td><b><%= username(user) %></b></td>
       <td><%= user.name %></td>
       <td><%= user.email %></td>
-      <td><%= link "View", to: user_path(@conn, :show, user.credentials.username) %></td>
+      <td><%= link "View", to: user_path(@conn, :show, username(user)) %></td>
     </tr>
   <% end %>
 </table>
