--- a/lib/aquir_web/templates/user/show.html.eex
+++ b/lib/aquir_web/templates/user/show.html.eex
@@ -1,2 +1,2 @@
 <h1>Showing User</h1>
-<p><%= @user.user_id %>, <%= @user.credentials.username %>, <%= @user.name %>, <%= @user.email %></p>
+<p><%= @user.user_id %>, <%= username(@user) %>, <%= @user.name %>, <%= @user.email %></p>
