Add basic navigation links

--- a/lib/aquir_web/templates/user/show.html.eex
+++ b/lib/aquir_web/templates/user/show.html.eex
@@ -1,2 +1,5 @@
 <h1>Showing User</h1>
-<p><%= @user.user_id %>, <%= username(@user) %>, <%= @user.name %>, <%= @user.email %></p>
+<div>
+  <p><%= @user.user_id %>, <%= username(@user) %>, <%= @user.name %>, <%= @user.email %></p>
+  <%= link("Show users", to: Routes.user_path(@conn, :index)) %>
+</div>
