Add NOTE on why NOT refactoring read.ex with `preload/2`

--- a/lib/aquir_web/templates/user/show.html.eex
+++ b/lib/aquir_web/templates/user/show.html.eex
@@ -1,5 +1,10 @@
 <h1>Showing User</h1>
 <div>
-  <p><%= @user.user_id %>, <%= username(@user) %>, <%= @user.name %>, <%= @user.email %></p>
+  <p>
+    <%= @user.user_id %>,
+    <%= username(@user) %>,
+    <%= @user.name %>,
+    <%= @user.email %>
+  </p>
   <%= link("Show users", to: Routes.user_path(@conn, :index)) %>
 </div>
